--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* GLOBAL ============================== */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
 
 :root {
   --color-dark: #292929;
@@ -17,4 +17,29 @@
 
 body {
   background-color: #F0F2F5;
+}
+
+a, a:hover {
+    text-decoration: none;
+    color: unset;
+}
+
+/* APP ============================== */
+.container {
+  width: min(90vw, 1000px);
+  margin: 0 auto;
+}
+
+.main-content {
+  display: flex;
+  margin-top: 4rem;
+}
+
+
+/* MOBILE BREAKPOINTS ================= */
+@media (max-width: 768px) {
+  .main-content {
+    display: flex;
+    flex-direction: column;
+  }
 }
