--- a/src/pages/Triangle/styles.css
+++ b/src/pages/Triangle/styles.css
@@ -21,6 +21,10 @@
   font-weight: 500;
 }
 
+.triangle span{
+  font-weight: 700;
+}
+
 #a-side {
   top: 4.8rem;
   left: 7rem;
@@ -28,7 +32,7 @@
 
 #b-side {
   top: 12.7rem;
-  left: 5.7rem;
+  left: 3.7rem;
 }
 
 #c-side {
