--- a/src/pages/Form/styles.css
+++ b/src/pages/Form/styles.css
@@ -19,7 +19,7 @@
 .form-content p {
   text-align: justify;
   font-size: 1.1rem;
-  font-weight: 300;
+  font-weight: normal;
   margin-bottom: 1rem;
 }
 
